Add new portfolio files

--- a/index.html
+++ b/index.html
@@ -7,37 +7,103 @@
   <title>Thomas Stephan | front-end developer & UI/UX Designer</title>
   <link rel="icon" type="image/png" href="images/icon.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="images/icon.png" sizes="16x16" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Slab:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <header class="header">
+  <div class="header-logo">
+    <a href="#home">
+      <img src="images/logo-colors.png" alt="Logo Thomas Stephan">
+    </a>
+  </div>
+  <div class="header-nav">
+    <ul>
+      <li><a href="#home">Accueil</a></li>
+      <li><a href="#about">A propos</a></li>
+      <li><a href="#process">Process</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </div>
 </header>
-<section class="section section-home">
+<section class="section section-home" id="home">
   <div class="section-inner">
-    <div class="logo">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Logo Thomas Stephan">
-      </a>
-    </div>
     <div class="welcome">
       <h1>Thomas Stephan</h1>
       <h2>Front-end Developer & UI/UX Designer</h2>
-      <a href="#start" class="start">Welcome !</a>
+      <a href="#about" class="button start">Welcome !</a>
     </div>
   </div>
 </section>
-<section class="section section-hello" id="start">
+<section class="section section-hello section-animated" id="about">
   <div class="section-inner">
     <div class="hello">
-      <h2>Bonjour!</h2>
-      <p>Diplômé de la Licence Professionnelle Activités et Techniques de Communication et passionné par le web et les nouvelles technologies depuis plusieurs années, je me forme en autodidacte depuis plus de 5 ans aux métiers du web et aux langages de programmation.</p>
-      <p>Orienté développement front-end et UI/UX design, je suis freelance depuis octobre 2014.</p>
-      <p>stephan-thomas.fr fait peau neuve, en attendant la refonte, vous pouvez jetter un coup d'oeil à quelques unes de mes réalisations.</p>
+      <h2>HI !</h2>
+      <p>Front-end Developer & UI/UX Designer, je suis freelance depuis 2014. Je vous accompagne dans tous vos projets web</p>
+      <p>Web design, intégration web, développemnt front-end je vous propose une solution professionnelle complète adaptée à vos besoins et à votre projet.</p>
+      <p>Création d'un site statique (HTML, CSS, JavaScript), avec framework (Vue.js) ou site dynamique (CMS Wordpress), profitez d'un interlocuteur unique et d'un suivi personnalisé du début à la fin de votre projet.</p>
+      <p>N'hésitez pas à me contacter pour tous vos projets web !</p>
+      <div class="letsworktogether">
+        <a href="mailto:&#116;&#104;&#111;&#109;&#097;&#115;&#046;&#115;&#116;&#101;&#112;&#104;&#097;&#110;&#046;&#112;&#114;&#111;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" title="Ouvre votre client mail" class="button">Travaillons ensemble !</a>
+      </div>
     </div>
   </div>
 </section>
-<section class="section section-work">
+<section class="section section-working-process section-animated" id="process">
+  <div class="section-inner">
+    <div class="w-container working-process">
+      <h2>Process</h2>
+      <div class="w-row">
+        <div class="w-col w-col-3">
+          <div class="working-process-bloc" title="cliquer pour afficher la suite">
+            <div class="working-process-bloc-header">
+              <div class="wpbh-round">
+                <img src="images/icons/idea.png" alt="Icone idea">
+              </div>
+            </div>
+            <h3>Votre idée</h3>
+            <p>Votre idée est la base de votre projet. Ensemble nous étudierons et définierons les lignes directrices de votre projet et mettrons en place un planning de développement en accord avec vos attentes.</p>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div class="working-process-bloc" title="cliquer pour afficher la suite">
+            <div class="working-process-bloc-header">
+              <div class="wpbh-round">
+                <img src="images/icons/design.png" alt="Icone design">
+              </div>
+            </div>
+            <h3>Design</h3>
+            <p>Une fois votre projet bien défini, je vous propose un web design professionnel en accord avec vos choix graphiques et les valeurs de votre entreprise.</p>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div class="working-process-bloc" title="cliquer pour afficher la suite">
+            <div class="working-process-bloc-header">
+              <div class="wpbh-round">
+                <img src="images/icons/development.png" alt="Icone development">
+              </div>
+            </div>
+            <h3>Développement</h3>
+            <p>Le web design validé, je développe votre site web en respectant les normes du web, de l'ergonome et de l'accessibilité afin de proposer des interfaces et une experience de navigation unique et optimale à vos utilisateurs.</p>
+          </div>
+        </div>
+        <div class="w-col w-col-3">
+          <div class="working-process-bloc" title="cliquer pour afficher la suite">
+            <div class="working-process-bloc-header">
+              <div class="wpbh-round">
+                <img src="images/icons/deployment.png" alt="Icone deployment">
+              </div>
+            </div>
+            <h3>Déploiement</h3>
+            <p>Enfin, le développement terminé et validé, je déploie votre site web sur votre hebergement. Si vous ne disposez pas encore d'une solution d'hébergement, je vous accompagne dans la réservation d'un nom de domaine et d'un hébergement.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section section-work section-animated" id="portfolio">
   <div class="section-inner">
     <div class="w-container showcase">
       <h2>Portfolio</h2>
@@ -48,52 +114,52 @@
               <img src="images/thumbs/montagne-nordic-trail.jpg" alt="Prévisualitation du site montagne-nordic-trail.fr">
             </a>
             <div class="project-info">
-              <h4><a href="http://montagne-nordic-trail.fr" title="montagne-nordic-trail.fr" target="_blank">montagne-nordic-trail.fr</a></h4>
-              <em>Création d'un site web dynamique responsive</em>
-              <strong>WordPress / HTML / CSS / JavaScript</strong>
+              <a href="http://montagne-nordic-trail.fr" title="montagne-nordic-trail.fr" target="_blank">
+                <h4>montagne-nordic-trail.fr</h4>
+                <em>Création d'un site web dynamique responsive</em>
+                <strong>WordPress / HTML / CSS / JavaScript</strong>
+              </a>
             </div>
           </div>
         </div>
-        <div class="w-col w-col-6">
-          <div class="project">
-            <a href="http://cap-energies-alsace.fr" title="cap-energies-alsace.fr" target="_blank">
-              <img src="images/thumbs/cap-energies-alsace.jpg" alt="Prévisualitation du site cap-energies-alsace.fr">
-            </a>
-            <div class="project-info">
-              <h4><a href="#" title="cap-energies-alsace.fr" target="_blank">cap-energies-alsace.fr</a></h4>
-              <em>Création d'un site web statique responsive</em>
-              <strong>HTML / CSS / JavaScript</strong>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w-row">
         <div class="w-col w-col-6">
           <div class="project">
             <a href="https://github.com/whysyb/wampserver-2.4-homepage-redesign" title="Dépôt Github wampserver 2.4 redesign" target="_blank">
               <img src="images/thumbs/wampserver-redesign.jpg" alt="Prévisualitation du redesign la homepage Wampserver 2.4">
             </a>
             <div class="project-info">
-              <h4><a href="https://github.com/whysyb/wampserver-2.4-homepage-redesign" title="Dépôt Github wampserver 2.4 redesign" target="_blank">Wamperserver 2.4 Redesign</a></h4>
-              <em>Redesign de la homepage Wampserver 2.4</em>
-              <strong>PHP / xml / HTML / CSS / JavaScript</strong>
-            </div>
-          </div>
-        </div>
-        <div class="w-col w-col-6">
-          <div class="project">
-            <a href="images/web-design-auportunes.jpg" title="Web design Au port'Unes" target="_blank">
-              <img src="images/thumbs/auportunes.jpg" alt="Prévisualitation du web design Au port'Unes">
-            </a>
-            <div class="project-info">
-              <h4><a href="images/web-design-auportunes.jpg" title="Web design Au port'Unes" target="_blank">Web design Au port'Unes</a></h4>
-              <em>Création d'un We bdesign pour Au port'Unes </em>
-              <strong>Photoshop CS6</strong>
+              <a href="https://github.com/whysyb/wampserver-2.4-homepage-redesign" title="Dépôt Github  wampserver 2.4 redesign" target="_blank">
+                <h4>Wamperserver 2.4 Redesign</h4>
+                <em>Redesign de la homepage Wampserver 2.4</em>
+                <strong>PHP / xml / HTML / CSS / JavaScript</strong>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
+<section class="section section-contact section-animated" id="contact">
+  <div class="section-inner">
+    <h2>Contact</h2>
+    <p>Un projet, une question ? Contactez-moi !</p>
+    <p class="encrypted-email">Email : &#116;&#104;&#111;&#109;&#097;&#115;&#046;&#115;&#116;&#101;&#112;&#104;&#097;&#110;&#046;&#112;&#114;&#111;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</p>
+    <a href="mailto:&#116;&#104;&#111;&#109;&#097;&#115;&#046;&#115;&#116;&#101;&#112;&#104;&#097;&#110;&#046;&#112;&#114;&#111;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" title="Ouvre votre client mail" class="button letshaveacoffee">
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="512px" height="512px">
+        <g>
+          <g>
+            <path d="M442.736,127.332h-13.459V86.551H82.724v110.043c0,33.145,9.393,65.366,27.162,93.176    c8.001,12.523,17.536,23.879,28.312,33.875h52.419h130.766h52.419c10.776-9.996,20.311-21.354,28.313-33.875    c4.893-7.658,9.126-15.659,12.728-23.913h27.894c38.193,0,69.264-31.072,69.264-69.264    C512,158.403,480.928,127.332,442.736,127.332z M442.736,235.44h-17.869c2.902-12.659,4.409-25.677,4.409-38.847v-38.844h13.459    c21.421,0,38.847,17.426,38.847,38.844C481.583,218.014,464.156,235.44,442.736,235.44z" fill="#FFFFFF"/>
+          </g>
+        </g>
+        <g>
+          <g>
+            <path d="M328.472,354.062H183.528H0v5.07c0,36.567,29.749,66.318,66.315,66.318h379.369c36.566,0,66.316-29.751,66.316-66.318    v-5.07H328.472z" fill="#FFFFFF"/>
+          </g>
+        </g>
+      </svg>
+      <span>Let's have a coffee</span>
+    </a>
   </div>
 </section>
 <footer class="footer">
@@ -160,6 +226,7 @@
     </div>
   </div>
 </footer>
+<script src="js/jquery.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
