--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <div class="section-inner">
     <div class="hello">
       <h2>HI !</h2>
-      <p>Front-end Developer & UI/UX Designer, je suis freelance depuis 2014. Je vous accompagne dans tous vos projets web</p>
-      <p>Web design, intégration web, développemnt front-end je vous propose une solution professionnelle complète adaptée à vos besoins et à votre projet.</p>
-      <p>Création d'un site statique (HTML, CSS, JavaScript), avec framework (Vue.js) ou site dynamique (CMS Wordpress), profitez d'un interlocuteur unique et d'un suivi personnalisé du début à la fin de votre projet.</p>
+      <p>Front-end Developer & UI/UX Designer, je suis freelance depuis 2014. Je vous accompagne dans tous vos projets web.</p>
+      <p>Web design, intégration web, développemnt front-end je vous propose une solution professionnelle complète, adaptée à vos besoins et à votre projet.</p>
+      <p>Création d'un site web statique (HTML, CSS, JavaScript), avec framework (Vue.js) ou site web dynamique (CMS Wordpress), profitez d'un interlocuteur unique et d'un suivi personnalisé du début à la fin de votre projet.</p>
       <p>N'hésitez pas à me contacter pour tous vos projets web !</p>
       <div class="letsworktogether">
         <a href="mailto:&#116;&#104;&#111;&#109;&#097;&#115;&#046;&#115;&#116;&#101;&#112;&#104;&#097;&#110;&#046;&#112;&#114;&#111;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" title="Ouvre votre client mail" class="button">Travaillons ensemble !</a>
