fix linear gradient on h1

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </div>
             </div>
             <h3>Développement</h3>
-            <p>Le web design validé, je développe votre site web en respectant les normes du web, de l'ergonome et de l'accessibilité afin de proposer des interfaces et une experience de navigation unique et optimale à vos utilisateurs.</p>
+            <p>Le web design validé, je développe votre site web en respectant les normes du web, de l'ergonomie et de l'accessibilité afin de proposer des interfaces et une experience de navigation unique et optimale à vos utilisateurs.</p>
           </div>
         </div>
         <div class="w-col w-col-3">
