add weevibes thumb

--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
             </div>
           </div>
         </div>
+        <div class="w-col w-col-6">
+          <div class="project">
+            <a href="http://www.weevibes.com/" title="www.weevibes.com" target="_blank">
+              <img src="images/thumbs/weevibes-landing.jpg" alt="Prévisualitation la landing page de www.weevibes.com'">
+            </a>
+            <div class="project-info">
+              <a href="http://www.weevibes.com/" title="www.weevibes.com" target="_blank">
+                <h4>www.weevibes.com</h4>
+                <em>Création d'une landing page</em>
+                <strong>HTML / CSS / JavaScript</strong>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
